# MonteMirage

./: .env.simple  .flake8  Dockerfile  README.md  constants.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  site_parser.py  sites.yaml  update_prices.py
SiteParsers/: base_parser.py  coinmarketcap.py  gateio.py
SiteParsers/errors/: base_parser_error.py  not_found_error.py
models/: historical_data.py
