[tool.poetry]
name = "montemirage"
version = "0.1.0"
description = ""
authors = ["Roman <romantovt31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wemake-python-styleguide = "^0.17.0"
pyyaml = "^6.0"
selenium = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
